--- a/site/Home.html
+++ b/site/Home.html
@@ -36,7 +36,7 @@
                   <li><a href="#">Symbolic Execution</a></li>
 				  <li><a href="#">Bi-abduction</a></li>
 				  <li><a href="#">JSIL</a></li>
-                  <li role="separator" class="divider"></li> 
+                  <li role="separator" class="divider"></li>
 				  <li><a href="#">Examples</a></li>
 				  <li><a href="#">Potential Impacts</a></li>
 				  <li><a href="#">Related Work</a></li>
@@ -49,7 +49,7 @@
           </div><!--/.nav-collapse -->
         </div>
       </nav>
-	
+
 	<div class="container" role="main">
 		<div class="jumbotron">
         <h1>Automatic Javascript Verification</h1>
@@ -61,7 +61,7 @@
     <p>
       She is a PhD Student at <b>Imperial College London</b> under the supervision of <b>Prof. Philippa Gardner</b> and a member of the Program Specification and Verification Group. She is currently doing research on <b>formal and automated verification about JavaScript programs</b>. Her areas of interest include Web Development, Software Product Lines, Software Reuse as well as Functional and Object-oriented Programming Languages.
       <br><br>
-      She received a B.Sc. and a M.Sc. in Computer science from Federal University of Pernambuco in Brazil. She interned as a software developer at SUATI, and later became a web developer at KOY, a technological company that aims to integrate software solutions into the legal system. During her internship and career as a web developer, she became aware of the lack of automated verification of JavaScript programs. Dedicated to helping other web developers in the future, she decided to join the team at Imperial College London to research automated testing and verification of JavaScript, which will potentially increase the productivity and efficiency of many others working in the field of web development. 
+      She received a B.Sc. and a M.Sc. in Computer science from Federal University of Pernambuco in Brazil. She interned as a software developer at SUATI, and later became a web developer at KOY, a technological company that aims to integrate software solutions into the legal system. During her internship and career as a web developer, she became aware of the lack of automated verification of JavaScript programs. Dedicated to helping other web developers in the future, she decided to join the team at Imperial College London to research automated testing and verification of JavaScript, which will potentially increase the productivity and efficiency of many others working in the field of web development.
       <br><br>
       She also enjoys travelling, running and doing Pilates in her free time.
       </p>
@@ -83,7 +83,7 @@
             <h4 class="list-group-item-heading"><strong>Compositional Symbolic Analysis for JavaScript: Unifying Symbolic Execution and Separation Logic.</strong></h4>
             <p class="list-group-item-text">POPL, 2019.</p>
             </a>
-            
+
           </div>
         </div>
     <div class="page-header">
@@ -100,11 +100,17 @@
         <br>
         This course is about software design and covers, among other topics, design principles, design patterns, architectural styles and concurrency.</p>
     </div>
-      
-  
+
+
 	</div>
-	
-  
-  
+
+    <div class="panel-footer text-muted">
+        <div class="container text-center">
+            ​
+            ​
+            ​
+        </div>
+    </div>
+
 </body>
 </html>
