fix second link

--- a/site/about.html
+++ b/site/about.html
@@ -78,7 +78,7 @@
               <h4 class="list-group-item-heading">Partially safe evolution of software product lines.</h4>
               <p class="list-group-item-text">In Proceedings of the 20th International Systems and Software Product Line Conference, pp. 124-133. ACM, 2016.</p>
             </a>
-            <a href="http://delivery.acm.org/10.1145/3300000/3290379/popl19main-p189-p.pdf?ip=129.31.158.39&id=3290379&acc=OA&key=BF07A2EE685417C5%2EF5014A9D3D5CC2D9%2E4D4702B0C3E38B35%2E6D218144511F3437&__acm__=1549202435_d9b318b136e17b3715f3fa5a9e3c6e56" class="list-group-item">
+            <a href="https://www.doc.ic.ac.uk/~pg/publications/FragosoSantos2019JaVerT.pdf" class="list-group-item">
               <h4 class="list-group-item-heading">JaVerT 2.0: Compositional Symbolic Execution for JavaScript.</h4>
               <p class="list-group-item-text">PACMPL, vol. 3 (POPL).</p>
             </a>
