Fixed mobile view

--- a/site/about.html
+++ b/site/about.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-	<nav class="navbar navbar-expand-lg navbar-default fixed-top">
+	<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
   <a class="navbar-brand" href="home.html">
     <img src="assets/ai/200h/logo.png" width="30" height="30" alt="">
   </a>
@@ -22,16 +22,16 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
+      <li class="nav-item text-center">
         <a class="nav-link" href="home.html">Documentation</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item text-center">
         <a class="nav-link" href="examples.html">Examples</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item text-center">
         <a class="nav-link" href="feedback.html">Feedback</a>
       </li>
-      <li class="nav-item active">
+      <li class="nav-item active text-center">
         <a class="nav-link" href="about.html">About the author</a>
       </li>
     </ul>
@@ -83,8 +83,8 @@
               <p class="list-group-item-text">PACMPL, vol. 3 (POPL).</p>
             </a>
             <a class="list-group-item disabled">
-            <h4 class="list-group-item-heading">Compositional Symbolic Analysis for JavaScript: Unifying Symbolic Execution and Separation Logic.</h4>
-            <p class="list-group-item-text">POPL, 2019.</p>
+            <h4 class="list-group-item-heading link-disabled">Compositional Symbolic Analysis for JavaScript: Unifying Symbolic Execution and Separation Logic.</h4>
+            <p class="list-group-item-text link-disabled">POPL, 2019.</p>
             </a>
 
           </div><br>
