--- a/site/examples.html
+++ b/site/examples.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>  
-	<nav class="navbar navbar-expand-lg navbar-default fixed-top">
+	<nav class="navbar navbar-expand-lg navbar-dark fixed-top">
   <a class="navbar-brand" href="home.html">
     <img src="assets/ai/200h/logo.png" width="30" height="30" alt="">
   </a>
@@ -22,16 +22,16 @@
 
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item">
+      <li class="nav-item text-center">
         <a class="nav-link" href="home.html">Documentation</a>
       </li>
-      <li class="nav-item active">
+      <li class="nav-item active text-center">
         <a class="nav-link" href="examples.html">Examples</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item text-center">
         <a class="nav-link" href="feedback.html">Feedback</a>
       </li>
-      <li class="nav-item">
+      <li class="nav-item text-center">
         <a class="nav-link" href="about.html">About the author</a>
       </li>
     </ul>
