Cleaned up directories

--- a/site/examples.html
+++ b/site/examples.html
@@ -54,12 +54,12 @@
   <h2> Celcius to Fahrenheit </h2>
   <hr>
   <p>In this example, the javascript takes in fahrenheit throug the text box and is supposed to calculate the value in celcius. However, the order of operations is incorrect due to not bracketng the equation correctly. The post condition will therefore evalute to false and so a bug will be detected.</p>
-  <img src="assets/examples/fahtocel.png" width="1000" height="425" alt="">
+  <img class="img-fluid" src="assets/examples/fahtocel.png" width="1000" height="425" alt="">
   <br><br>
   <hr>
   <h2> Adding to List </h2>
   <p>In this example, the for loop is constructed incorrectly and actually iterates 11 times instead of 10. The post condition checks for the list having 10 items and so will fail and so the bug is detected.</p>
-  <img src="assets/examples/list.png" width="1000" height="425" alt="">
+  <img class="img-fluid" src="assets/examples/list.png" width="1000" height="425" alt="">
   </div>
   
    <footer class="container">
